@@ -21,6 +21,8 @@ Version 1.4.5 - CVS
     specified location.
   - Added trailing slash for data directory used by global file based
     address book (#1105760).
+  - Fixed possible php E_ALL warnings in translate plugin gpltrans engine
+    (#1100789).
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
